[engine] full code review (foreach loops and some other problems detected by code analysis tools)
git-svn-id: https://svn.apache.org/repos/asf/velocity/engine/trunk@1780734 13f79535-47bb-0310-9956-ffa450edef68